Commit equals to Push

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "server = DESKTOP-45H0ONO\\SQLEXPRESS; Trusted_Connection = true; Database = eTicket2"
+    "connection": "Data Source=(localdb)\\MSSQLLocalDB;Trusted_Connection = True; Database = eTicket2"
   }
 }
